fixed the input layout on mobile view

--- a/Web Development Training/style.css
+++ b/Web Development Training/style.css
@@ -147,14 +147,15 @@ main {
     margin: 1rem 0 0 0;
 }
 
-.passx{
+.passx {
     /* border: 2px solid red; */
     position: relative;
 }
-.fa-eye{
+
+.fa-eye {
     position: absolute;
     right: 2%;
-    padding: .5rem ;
+    padding: .5rem;
     color: rgb(164, 163, 163);
     cursor: pointer;
 }
@@ -189,6 +190,13 @@ main {
         margin: 5px auto;
     }
 
+    .detail {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        /* margin: 1rem ; */
+    }
+
     /* mobile design for left section */
     .left-section {
         width: 100%;
@@ -201,9 +209,10 @@ main {
         align-items: start;
     }
 
-    .heading{
+    .heading {
         padding: .5rem;
     }
+
     .desk-text {
         display: none;
         color: rgb(164, 163, 163);
